CHANGES IN FLTK 1.1.8

	- Documentation fixes (STR #1454, STR #1455, STR #1456,
	  STR #1457, STR #1458, STR #1460, STR #1481, STR #1578,
	  STR #1639, STR #1645, STR #1644)
	- Made -O3 the default optimization on Cygwin/Mingw since
	  -Os currently creates bad code (STR #1656)
	- OSF/Tru64 now uses 'install-sh' instead of 'install' to
	  accomodate for a missing '-d' option (STR #1632)
	- New option in Fluid project settings to translate all
	  shortcut modifiers from FL_META or FL_CTRL to FL_COMMAND
	- Added static icon, text selection, and HTML formatting to
	  fl_message etc. (STR #1626)
	- Fixed selection of first word in Fl_Help_View
	- Fixed endless loop in Fl_Text_Display (STR #1655)
	- Allowing shortcuts in Tabs (STR #1652)
	- Fixed Makefile "make clean" (STR #1642,
	  STR #1643, STR #1641)
	- The sample RPM spec file now enables large file support
	  and threading support (STR #1603)
	- Changed minimum contrast between background and text to 
	  96 and added more weight to the blue component to improve
	  readability for certain color combinations (STR #1625)
	- Fixed VCNet OpenGL project file (STR #1617)
	- Fixed scrolling of clipped areas in MSWindows (STR
	  #1601)
	- Fixed clipping in OS X Quartz offscreen buffers (STR
	  #1595)
	- Now flush file chooser preferences after every change to
	  avoid data loss (STR #1609)
	- The Fl_File_Chooser constructor now saves and restores the
	  current group (STR #1611)
	- Added Fl::awake(fn*,void*) to set a handler for thread
	  messages (STR #1536)
	- Added "mute sound" option to Sudoku game.
	- Updated the bundled zlib to v1.2.3.
	- Updated the bundled libpng to v1.2.16.
	- "make install" now uses the install command (or the
	  included install-sh script) to copy files to the
	  install directories, to ensure that permissions are
	  correct.
	- Fixed DLL generation via MingW/Cygwin (STR #1546)
	- FLUID incorrectly opened the display when generating
	  source code for Fl_Help_View widgets (STR #1318)