@@ -3,6 +3,8 @@ CHANGES IN FLTK 1.1.8
 	- Documentation fixes (STR #1454, STR #1455, STR #1456,
 	  STR #1457, STR #1458, STR #1460, STR #1481, STR #1578,
 	  STR #1639, STR #1645, STR #1644)
+	- Fixed calculation of stride for image scaling and
+	  color manipulation (STR #1673)
 	- Made -O3 the default optimization on Cygwin/Mingw since
 	  -Os currently creates bad code (STR #1656)
 	- OSF/Tru64 now uses 'install-sh' instead of 'install' to
